# OpenGLCheckWithQt

./: CMakeLists.txt  README.md  azure-pipelines.yml
cmake_modules/: External-Qt.cmake  Windeployqt.cmake
scripts/: linux-makeself  pkg
src/: CheckOpenGLVersion.cpp  CheckOpenGLVersion.h  main.cxx
